fixed scrolling issues on small screens

--- a/Prototype Demo/doc-view.css
+++ b/Prototype Demo/doc-view.css
@@ -3,6 +3,14 @@
     padding: 0;
 }
 
+html {
+    overflow: scroll;
+}
+
+.container {
+    overflow: scroll;
+}
+
 .titlebar {
     background: #0D6EFD;
 }
